2007-07-05  Thorsten Kukuk  <kukuk@suse.de>

	* src/pam-config.8.xml: Remove obsoete xauth entry.

2007-07-05  Sven Schober  <sschober@suse.de>
	* src/mod_pam_unix.c: Changed option "big_crypt" to
	"bigcrypt".
	* src/mod_pam_mount.c: New.
	* src/pam-config.c: Added options for pam_mount.so.
	* src/mod_pam_unix.c: Added support for pam_mount.so:
	"use_first_pass" gets appended if pam_mount.so is enabled.
	* src/mod_pam_unix2.c: same as above.
	* src/pam-config.8.xml: Added documentation for pam_mount.so
	and pam_unix.so.
	* src/supported-modules.h: Added pam_mount.so to
	common_module_list, auth and session list. 
	* src/Makefile.am: Added mod_pam_mount.c. 

2007-07-04  Sven Schober  <sschober@suse.de>

	* src/mod_pam_unix.c: New. 
	* src/sanity_checks.c: Added check for pam_unix/2-conflict
	and fallback to pam_unix2.so.
	* src/pam-config.c: Added options for pam_unix.so.
	* src/supported-modules.h: Added pam_unix.so to
	module-lists.

2007-07-04  Thorsten Kukuk  <kukuk@suse.de>

	* src/mod_pam_loginuid.c: New.
	* src/pam-config.c: Add support for single login files.
	* src/single_config.c: New file.

2007-07-03  Thorsten Kukuk  <kukuk@suse.de>

	* src/mod_pam_pkcs11.c: New.

2007-07-02  Thorsten Kukuk  <kukuk@suse.de>

	* src/write_config.c: New file, combine all old 4 variants.

	* src/Makefile.am: Add mod_pam_apparmor and mod_pam_nam
	* src/supported-modules.h: Likewise.
	* src/mod_pam_apparmor.c: New.
	* src/mod_pam_nam.c: New.
	* src/pam-config.c (main): Convert entries.

	* src/Makefile.am: Add mod_pam_krb5.
	* src/supported-modules.h: Likewise.
	* src/mod_pam_cracklib.c: New.
	* src/pam-config.c (main): Convert pam_krb5 entries.

	* src/mod_pam_krb5.c: New.
	* src/pam-config.c (main): Convert pam_krb5 entries.
	* src/Makefile.am: Add mod_pam_krb5.
	* src/supported-modules.h: Add mod_pam_krb5.

	* src/mod_pam_localuser.c: Implement write function.

	* src/load_obsolete_conf.c: Convert for new interface.

	* src/pam-config.c (main): Convert pam_limits entries.